--- a/ShimLib/ShimLib.csproj
+++ b/ShimLib/ShimLib.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Msvcrt.cs" />
     <Compile Include="ZoomPictureBox.cs">
       <SubType>Component</SubType>
     </Compile>
