--- a/ShimLib/ShimLib.csproj
+++ b/ShimLib/ShimLib.csproj
@@ -46,6 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Msvcrt.cs" />
+    <Compile Include="Util.cs" />
     <Compile Include="ZoomPictureBox.cs">
       <SubType>Component</SubType>
     </Compile>
