--- a/ShimLib/ShimLib.csproj
+++ b/ShimLib/ShimLib.csproj
@@ -45,7 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Msvcrt.cs" />
+    <Compile Include="MsvcrtDll.cs" />
     <Compile Include="Util.cs" />
     <Compile Include="ZoomPictureBox.cs">
       <SubType>Component</SubType>
