NativeImport 프로젝트 제거

--- a/BigImageViewer/BigImageViewer.csproj
+++ b/BigImageViewer/BigImageViewer.csproj
@@ -79,6 +79,7 @@
       <DependentUpon>FormMain.cs</DependentUpon>
     </Compile>
     <Compile Include="Hole.cs" />
+    <Compile Include="NativeDll.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QuadTree.cs" />
@@ -108,10 +109,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\NativeImport\NativeImport.csproj">
-      <Project>{60a7ec83-e6f7-40f7-8424-2568695a6fef}</Project>
-      <Name>NativeImport</Name>
-    </ProjectReference>
     <ProjectReference Include="..\ShimLib\ShimLib.csproj">
       <Project>{C70EFCD5-2A2B-4384-81E5-39275DF3BE42}</Project>
       <Name>ShimLib</Name>
